Incluida variable Area_bolanha en las listas

--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -4733,7 +4733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4753,7 +4753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -4855,7 +4855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -5146,7 +5146,7 @@
        "[129 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5166,7 +5166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -5233,7 +5233,7 @@
       "Archivo ../DataIn/VarExpl/12-13-14_Var.Explic_FamiTotal.xlsx leído exitosamente con sufijo RedeTotFamil.\n",
       "Archivo ../DataIn/VarExpl/Atributos_Productores.xlsx leído exitosamente.\n",
       "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_indep_variables.csv.\n",
-      "Dimensiones del DataFrame resultante: (129, 28)\n"
+      "Dimensiones del DataFrame resultante: (129, 29)\n"
      ]
     }
    ],
@@ -5301,7 +5301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5336,7 +5336,6 @@
        "      <th>Indeg_RedeRisk_Cen</th>\n",
        "      <th>Indeg_RedeConfianc</th>\n",
        "      <th>...</th>\n",
-       "      <th>1_VarExp_Moranca</th>\n",
        "      <th>2_VarExp_Atri_Tabanca</th>\n",
        "      <th>3_VarExp_Atri_Fanado</th>\n",
        "      <th>4_VarExp_Atri_CargosWM</th>\n",
@@ -5346,6 +5345,7 @@
        "      <th>8_VarExp_Atri_IndInvestDiq</th>\n",
        "      <th>9_VarExp_Atri_IndMelhorTecnDiqCint</th>\n",
        "      <th>10_VarExp_Atri_MelhorTecnTubos</th>\n",
+       "      <th>Area_bolanha</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5362,7 +5362,6 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>Atxugn</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -5372,6 +5371,7 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>2.3644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5386,7 +5386,6 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>Abicamba</td>\n",
        "      <td>Fanhi</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -5396,6 +5395,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.5087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5410,7 +5410,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>Ancanha</td>\n",
        "      <td>Bsoran</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -5420,6 +5419,7 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.4640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5434,7 +5434,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>Antamba</td>\n",
        "      <td>Bsoran</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -5444,6 +5443,7 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.5186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5458,7 +5458,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>Agueien</td>\n",
        "      <td>Fanhi</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -5468,6 +5467,7 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.2500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -5506,7 +5506,6 @@
        "      <td>7</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
-       "      <td>Athua</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -5516,6 +5515,7 @@
        "      <td>4</td>\n",
        "      <td>16</td>\n",
        "      <td>1</td>\n",
+       "      <td>4.7238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125</th>\n",
@@ -5530,7 +5530,6 @@
        "      <td>9</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>Abicuntche</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -5540,6 +5539,7 @@
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
+       "      <td>5.3823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>126</th>\n",
@@ -5554,7 +5554,6 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>Akbale</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -5564,6 +5563,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>2.9833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>127</th>\n",
@@ -5578,7 +5578,6 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>Anha</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -5588,6 +5587,7 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.3262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>128</th>\n",
@@ -5602,7 +5602,6 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
-       "      <td>Andancobe</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -5612,10 +5611,11 @@
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
+       "      <td>2.0350</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>129 rows × 28 columns</p>\n",
+       "<p>129 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -5658,75 +5658,75 @@
        "127                    4                   0                   2   \n",
        "128                    9                   9                   1   \n",
        "\n",
-       "     Indeg_RedeConfianc  ...  1_VarExp_Moranca  2_VarExp_Atri_Tabanca  \\\n",
-       "0                     1  ...            Atxugn               Ntchugal   \n",
-       "1                     1  ...          Abicamba                  Fanhi   \n",
-       "2                     0  ...           Ancanha                 Bsoran   \n",
-       "3                     0  ...           Antamba                 Bsoran   \n",
-       "4                     0  ...          Agueien                   Fanhi   \n",
-       "..                  ...  ...               ...                    ...   \n",
-       "124                   5  ...             Athua               Ntchugal   \n",
-       "125                   1  ...       Abicuntche                Ntchugal   \n",
-       "126                   0  ...            Akbale               Ntchugal   \n",
-       "127                   2  ...              Anha               Ntchugal   \n",
-       "128                   3  ...         Andancobe               Ntchugal   \n",
+       "     Indeg_RedeConfianc  ...  2_VarExp_Atri_Tabanca  3_VarExp_Atri_Fanado  \\\n",
+       "0                     1  ...               Ntchugal                     0   \n",
+       "1                     1  ...                  Fanhi                     0   \n",
+       "2                     0  ...                 Bsoran                     0   \n",
+       "3                     0  ...                 Bsoran                     1   \n",
+       "4                     0  ...                  Fanhi                     0   \n",
+       "..                  ...  ...                    ...                   ...   \n",
+       "124                   5  ...               Ntchugal                     1   \n",
+       "125                   1  ...               Ntchugal                     1   \n",
+       "126                   0  ...               Ntchugal                     1   \n",
+       "127                   2  ...               Ntchugal                     1   \n",
+       "128                   3  ...               Ntchugal                     1   \n",
        "\n",
-       "     3_VarExp_Atri_Fanado  4_VarExp_Atri_CargosWM  5_VarExp_Atri_Idade  \\\n",
-       "0                       0                       0                   53   \n",
-       "1                       0                       0                   37   \n",
-       "2                       0                       0                   25   \n",
-       "3                       1                       0                   48   \n",
-       "4                       0                       0                   30   \n",
-       "..                    ...                     ...                  ...   \n",
-       "124                     1                       0                   52   \n",
-       "125                     1                       0                   51   \n",
-       "126                     1                       0                   78   \n",
-       "127                     1                       0                   52   \n",
-       "128                     1                       0                   60   \n",
+       "     4_VarExp_Atri_CargosWM  5_VarExp_Atri_Idade  6_VarExp_Atri_ClassIdade  \\\n",
+       "0                         0                   53                         2   \n",
+       "1                         0                   37                         2   \n",
+       "2                         0                   25                         1   \n",
+       "3                         0                   48                         2   \n",
+       "4                         0                   30                         1   \n",
+       "..                      ...                  ...                       ...   \n",
+       "124                       0                   52                         2   \n",
+       "125                       0                   51                         2   \n",
+       "126                       0                   78                         3   \n",
+       "127                       0                   52                         2   \n",
+       "128                       0                   60                         2   \n",
        "\n",
-       "     6_VarExp_Atri_ClassIdade  7_VarExp_Atri_IndForcaFugon  \\\n",
-       "0                           2                          1.0   \n",
-       "1                           2                          1.0   \n",
-       "2                           1                          1.0   \n",
-       "3                           2                          2.0   \n",
-       "4                           1                          1.0   \n",
-       "..                        ...                          ...   \n",
-       "124                         2                          2.0   \n",
-       "125                         2                          3.0   \n",
-       "126                         3                          2.0   \n",
-       "127                         2                          1.0   \n",
-       "128                         2                          4.0   \n",
+       "     7_VarExp_Atri_IndForcaFugon  8_VarExp_Atri_IndInvestDiq  \\\n",
+       "0                            1.0                           3   \n",
+       "1                            1.0                           1   \n",
+       "2                            1.0                           4   \n",
+       "3                            2.0                           4   \n",
+       "4                            1.0                           2   \n",
+       "..                           ...                         ...   \n",
+       "124                          2.0                           4   \n",
+       "125                          3.0                           2   \n",
+       "126                          2.0                           1   \n",
+       "127                          1.0                           4   \n",
+       "128                          4.0                           3   \n",
        "\n",
-       "     8_VarExp_Atri_IndInvestDiq 9_VarExp_Atri_IndMelhorTecnDiqCint  \\\n",
-       "0                             3                                  3   \n",
-       "1                             1                                  0   \n",
-       "2                             4                                  3   \n",
-       "3                             4                                  3   \n",
-       "4                             2                                  1   \n",
-       "..                          ...                                ...   \n",
-       "124                           4                                 16   \n",
-       "125                           2                                  7   \n",
-       "126                           1                                  1   \n",
-       "127                           4                                  3   \n",
-       "128                           3                                  7   \n",
+       "     9_VarExp_Atri_IndMelhorTecnDiqCint 10_VarExp_Atri_MelhorTecnTubos  \\\n",
+       "0                                     3                              0   \n",
+       "1                                     0                              0   \n",
+       "2                                     3                              1   \n",
+       "3                                     3                              0   \n",
+       "4                                     1                              0   \n",
+       "..                                  ...                            ...   \n",
+       "124                                  16                              1   \n",
+       "125                                   7                              0   \n",
+       "126                                   1                              0   \n",
+       "127                                   3                              0   \n",
+       "128                                   7                              1   \n",
        "\n",
-       "    10_VarExp_Atri_MelhorTecnTubos  \n",
-       "0                                0  \n",
-       "1                                0  \n",
-       "2                                1  \n",
-       "3                                0  \n",
-       "4                                0  \n",
-       "..                             ...  \n",
-       "124                              1  \n",
-       "125                              0  \n",
-       "126                              0  \n",
-       "127                              0  \n",
-       "128                              1  \n",
+       "    Area_bolanha  \n",
+       "0         2.3644  \n",
+       "1         0.5087  \n",
+       "2         1.4640  \n",
+       "3         1.5186  \n",
+       "4         0.2500  \n",
+       "..           ...  \n",
+       "124       4.7238  \n",
+       "125       5.3823  \n",
+       "126       2.9833  \n",
+       "127       1.3262  \n",
+       "128       2.0350  \n",
        "\n",
-       "[129 rows x 28 columns]"
+       "[129 rows x 29 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
