--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -4733,7 +4733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4753,7 +4753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4811,7 @@
     "        # Leer la hoja especificada\n",
     "        df = pd.read_excel(file, sheet_name=sheet_name)\n",
     "        \n",
-    "        # Seleccionar solo las columnas que contienen 'InDeg', 'Deg', o 'id'\n",
+    "        # Seleccionar solo las columnas que contienen 'Indeg', 'Deg', o 'id'\n",
     "        cols_to_keep = [col for col in df.columns if re.fullmatch(r'OutDeg|Degree|id', col)]\n",
     "        df = df[cols_to_keep]\n",
     "        \n",
@@ -4855,7 +4855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5146,7 +5146,7 @@
        "[129 rows x 12 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5166,7 +5166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -5246,8 +5246,8 @@
     "        # Leer el archivo Excel\n",
     "        df = pd.read_excel(file, sheet_name=sheet_name)\n",
     "        \n",
-    "        # Seleccionar solo las columnas que contienen exactamente 'InDeg' o 'Deg' en el nombre\n",
-    "        cols_to_keep = [col for col in df.columns if re.fullmatch(r'OutDeg|Degree|PC1|PC2|Avg_Distancia|id', col)]\n",
+    "        # Seleccionar solo las columnas que contienen exactamente 'Indeg' o 'Deg' en el nombre\n",
+    "        cols_to_keep = [col for col in df.columns if re.fullmatch(r'Indeg|Degree|PC1|PC2|Avg_Distancia|id', col)]\n",
     "        df = df[cols_to_keep]\n",
     "        \n",
     "        \n",
@@ -5301,7 +5301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -5326,15 +5326,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>OutDeg_RedConfltAgu</th>\n",
+       "      <th>Indeg_RedConfltAgu</th>\n",
        "      <th>Degree_RedConfliAgu</th>\n",
        "      <th>Degree_RedeIrmonsPr</th>\n",
-       "      <th>OutDeg_PaiTiopaterC</th>\n",
-       "      <th>OutDeg_TiosMaternos</th>\n",
+       "      <th>Indeg_PaiTiopaterC</th>\n",
+       "      <th>Indeg_TiosMaternos</th>\n",
        "      <th>Degree_IntimAmigUnd</th>\n",
-       "      <th>OutDeg_IntimAmigos_</th>\n",
-       "      <th>OutDeg_RedeRisk_Cen</th>\n",
-       "      <th>OutDeg_RedeConfianc</th>\n",
+       "      <th>Indeg_IntimAmigos_</th>\n",
+       "      <th>Indeg_RedeRisk_Cen</th>\n",
+       "      <th>Indeg_RedeConfianc</th>\n",
        "      <th>...</th>\n",
        "      <th>2_VarExp_Atri_Tabanca</th>\n",
        "      <th>3_VarExp_Atri_Fanado</th>\n",
@@ -5355,12 +5355,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>8</td>\n",
-       "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>0</td>\n",
@@ -5382,7 +5382,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
@@ -5404,11 +5404,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>Bsoran</td>\n",
        "      <td>0</td>\n",
@@ -5428,11 +5428,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>Bsoran</td>\n",
        "      <td>1</td>\n",
@@ -5452,11 +5452,11 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>Fanhi</td>\n",
        "      <td>0</td>\n",
@@ -5502,9 +5502,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
        "      <td>...</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
@@ -5523,12 +5523,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
@@ -5548,11 +5548,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
@@ -5574,9 +5574,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>...</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
@@ -5598,9 +5598,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>9</td>\n",
+       "      <td>9</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>Ntchugal</td>\n",
        "      <td>1</td>\n",
@@ -5619,57 +5619,57 @@
        "</div>"
       ],
       "text/plain": [
-       "                    id  OutDeg_RedConfltAgu  Degree_RedConfliAgu  \\\n",
-       "0          Aiace Quior                    0                    0   \n",
-       "1          Alamada Bia                    0                    0   \n",
-       "2     Alanghate Mfumba                    0                    0   \n",
-       "3        Albat Calabus                    0                    0   \n",
-       "4     Americano Mbunde                    0                    0   \n",
-       "..                 ...                  ...                  ...   \n",
-       "124     Vieira Bedugle                    3                    3   \n",
-       "125  Viriato Quintunda                    0                    0   \n",
-       "126     Wangna Ntchoba                    0                    0   \n",
-       "127     Wilndan Tchuda                    0                    0   \n",
-       "128     Winaba Ndongle                    0                    0   \n",
+       "                    id  Indeg_RedConfltAgu  Degree_RedConfliAgu  \\\n",
+       "0          Aiace Quior                   0                    0   \n",
+       "1          Alamada Bia                   0                    0   \n",
+       "2     Alanghate Mfumba                   0                    0   \n",
+       "3        Albat Calabus                   0                    0   \n",
+       "4     Americano Mbunde                   0                    0   \n",
+       "..                 ...                 ...                  ...   \n",
+       "124     Vieira Bedugle                   3                    3   \n",
+       "125  Viriato Quintunda                   0                    0   \n",
+       "126     Wangna Ntchoba                   0                    0   \n",
+       "127     Wilndan Tchuda                   0                    0   \n",
+       "128     Winaba Ndongle                   0                    0   \n",
        "\n",
-       "     Degree_RedeIrmonsPr  OutDeg_PaiTiopaterC  OutDeg_TiosMaternos  \\\n",
-       "0                      3                    0                    0   \n",
-       "1                      0                    0                    0   \n",
-       "2                      0                    0                    0   \n",
-       "3                      0                    0                    2   \n",
-       "4                      2                    0                    3   \n",
-       "..                   ...                  ...                  ...   \n",
-       "124                    0                    0                    0   \n",
-       "125                    4                    0                    0   \n",
-       "126                    0                    0                    1   \n",
-       "127                    0                    0                    0   \n",
-       "128                    1                    0                    0   \n",
+       "     Degree_RedeIrmonsPr  Indeg_PaiTiopaterC  Indeg_TiosMaternos  \\\n",
+       "0                      3                   1                   2   \n",
+       "1                      0                   0                   0   \n",
+       "2                      0                   0                   2   \n",
+       "3                      0                   0                   0   \n",
+       "4                      2                   0                   0   \n",
+       "..                   ...                 ...                 ...   \n",
+       "124                    0                   0                   0   \n",
+       "125                    4                   1                   0   \n",
+       "126                    0                   0                   0   \n",
+       "127                    0                   0                   0   \n",
+       "128                    1                   0                   0   \n",
        "\n",
-       "     Degree_IntimAmigUnd  OutDeg_IntimAmigos_  OutDeg_RedeRisk_Cen  \\\n",
-       "0                      8                    2                    3   \n",
-       "1                      4                    4                    0   \n",
-       "2                      3                    2                    0   \n",
-       "3                      6                    4                    1   \n",
-       "4                      1                    1                    0   \n",
-       "..                   ...                  ...                  ...   \n",
-       "124                    9                    4                    8   \n",
-       "125                   12                    5                    2   \n",
-       "126                    3                    2                    2   \n",
-       "127                    4                    4                    0   \n",
-       "128                    9                    1                    2   \n",
+       "     Degree_IntimAmigUnd  Indeg_IntimAmigos_  Indeg_RedeRisk_Cen  \\\n",
+       "0                      8                   6                   3   \n",
+       "1                      4                   1                   0   \n",
+       "2                      3                   2                   0   \n",
+       "3                      6                   2                   0   \n",
+       "4                      1                   1                   0   \n",
+       "..                   ...                 ...                 ...   \n",
+       "124                    9                   7                   7   \n",
+       "125                   12                   8                   9   \n",
+       "126                    3                   2                   4   \n",
+       "127                    4                   0                   2   \n",
+       "128                    9                   9                   1   \n",
        "\n",
-       "     OutDeg_RedeConfianc  ...  2_VarExp_Atri_Tabanca  3_VarExp_Atri_Fanado  \\\n",
-       "0                      2  ...               Ntchugal                     0   \n",
-       "1                      1  ...                  Fanhi                     0   \n",
-       "2                      3  ...                 Bsoran                     0   \n",
-       "3                      2  ...                 Bsoran                     1   \n",
-       "4                      2  ...                  Fanhi                     0   \n",
-       "..                   ...  ...                    ...                   ...   \n",
-       "124                    1  ...               Ntchugal                     1   \n",
-       "125                    2  ...               Ntchugal                     1   \n",
-       "126                    1  ...               Ntchugal                     1   \n",
-       "127                    1  ...               Ntchugal                     1   \n",
-       "128                    2  ...               Ntchugal                     1   \n",
+       "     Indeg_RedeConfianc  ...  2_VarExp_Atri_Tabanca  3_VarExp_Atri_Fanado  \\\n",
+       "0                     1  ...               Ntchugal                     0   \n",
+       "1                     1  ...                  Fanhi                     0   \n",
+       "2                     0  ...                 Bsoran                     0   \n",
+       "3                     0  ...                 Bsoran                     1   \n",
+       "4                     0  ...                  Fanhi                     0   \n",
+       "..                  ...  ...                    ...                   ...   \n",
+       "124                   5  ...               Ntchugal                     1   \n",
+       "125                   1  ...               Ntchugal                     1   \n",
+       "126                   0  ...               Ntchugal                     1   \n",
+       "127                   2  ...               Ntchugal                     1   \n",
+       "128                   3  ...               Ntchugal                     1   \n",
        "\n",
        "     4_VarExp_Atri_CargosWM  5_VarExp_Atri_Idade  6_VarExp_Atri_ClassIdade  \\\n",
        "0                         0                   53                         2   \n",
@@ -5726,7 +5726,7 @@
        "[129 rows x 29 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
